update LoggingFilter and SecurityFilterChain